5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1582_1332.log
== TEST (2019-03-30 23:02:07) 
-- CODE:
aresta =5
area =3/2(3)**0.5aresta**2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2(3)**0.5aresta**2 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:05:12) 
-- CODE:
aresta =5**2
area =3/2*raiz*aresta
raiz =(3)**0.5 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*raiz*aresta
NameError: name 'raiz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:43) 
-- CODE:
aresta =5**2
raiz =(3)**0.5 
area =3/2*raiz*aresta
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:39:52) 
-- CODE:
aresta =5**2
raiz =(3)**0.5 
area =3/2*raiz*aresta
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:39:57) 
-- CODE:
aresta =5**2
raiz =(3)**0.5 
area =3/2*raiz*aresta
print(round(area, 4))
-- EXECUTION TIME:
0.151657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
